fixed overflow problem in lesson

--- a/frontend/src/styles/lesson.css
+++ b/frontend/src/styles/lesson.css
@@ -53,7 +53,7 @@ height:85vh;
   width: 100%;
   align-items: center;
   justify-content: center;
-  gap:10%;
+  gap:20px;
 }
 .lesson-container-1c {
   width:100%;
@@ -83,24 +83,33 @@ height:85vh;
 }
 
 .lesson-l1 {
-height:20%;
 border: 2px solid black;
 width: 40%;
-height: 20%;
+height: 40%;
 display: flex;
 font-size: 1.2em;
 display: grid;
-grid-template: repeat(1fr, 4) / repeat(1fr, 4);
+grid-template: repeat(4, 1fr) / repeat(4, 1fr );
 
 }
 .l1{
-  grid-row: 1/2;
+  grid-row: 1/3;
   grid-column:2/4;
+  overflow-y: auto;
+  word-wrap: break-word;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
 }
 .peek-icon{
-  grid-row: 1/2;
+  grid-row: 1/3;
   grid-column: 4/5;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .peek-icon:hover{
   cursor: pointer;
@@ -109,6 +118,8 @@ grid-template: repeat(1fr, 4) / repeat(1fr, 4);
   color:green;
   grid-row: 3/4;
   grid-column:2/4;
+  overflow-y: auto;
+  word-wrap: break-word;
 }
 .lesson-l2 {
   height:20%;
